force-app/main/default/objects/GDL_Profile__c/GDL_Profile__c.object-meta.xml
<CustomObject>
    <label>Distributor Profile</label>
    <nameField>
        <displayFormat>GDL_P-{0000}</displayFormat>
        <label>Distributor Profile ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributor Profiles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>