force-app/main/default/objects/GDL_Profile__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filterItems>
        <filterItems>
            <field>Account.Organization__c</field>
            <operation>equals</operation>
            <value>Parent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distributor Profiles</relationshipLabel>
    <relationshipName>Distributor_Profiles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>