force-app/main/default/objects/GDL_Profile__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <label>Image</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>distributor-1.jpg</fullName>
                <default>true</default>
                <label>distributor-1.jpg</label>
            </value>
            <value>
                <fullName>distributor-2.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-3.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-4.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-5.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-6.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-7.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-8.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-9.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-10.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-11.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-12.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-13.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-14.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-15.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-16.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-17.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-18.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-19.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-20.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-21.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-22.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-23.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-24.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-25.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-26.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-27.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-28.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-29.jpg</fullName>
            </value>
            <value>
                <fullName>distributor-30.jpg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>