force-app/main/default/objects/GDL_Profile__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>LEFT(Account__r.Name, FIND(&apos; - &apos; ,Account__r.Name) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>